add table reset and replace margin with padding for spacing

--- a/output/staffingUpdate.html
+++ b/output/staffingUpdate.html
@@ -5,7 +5,7 @@
     <title>Staffing Update</title>
     
   </head>
-  <body>      
+  <body>
     <table border="0" cellspacing="0" cellpadding="0" style="-webkit-font-smoothing: antialiased; background-color: #f8f8f8; color: #574141; font-family: 'Open Sans', 'Segoe UI', Segoe, 'Segoe WP', 'Helvetica Neue', 'Roboto', sans-serif; font-weight: 200; margin: auto; padding: 0; width: 600px;">
       <tr>
         <td style="font-size: 12px; padding: 10px 35px;"><h2>2016 Aug</h2></td>
@@ -28,19 +28,26 @@
       </tr>
       <tr>
         <td style="font-size: 12px; padding: 10px 35px;">
-          <p style="font-size: 18px; margin-top: 40px;">Hello Singapore,</p>
+          <p style="font-size: 18px; padding-top: 30px;">Hello Singapore,</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo modi at perspiciatis quam ullam, fuga. Dolores odit dolor iste saepe, quae quidem veritatis animi perferendis sit, nisi quibusdam, placeat. Eaque quaerat fugiat expedita est culpa, illo neque ea natus. Quae perspiciatis dolor rem praesentium eos. Debitis odio voluptatem ipsam, pariatur iste fuga neque nesciunt, aliquid, nisi, sint optio adipisci itaque maiores. Laudantium id iste accusantium, numquam, voluptates earum nisi optio blanditiis quisquam exercitationem veniam provident! Esse unde beatae ipsa, minima adipisci dolorum, inventore repellendus quaerat excepturi eligendi illum atque perspiciatis delectus amet, eos nisi? Cum at laboriosam</p>
-          <p style="margin-top: 40px;">
+          <p style="padding-top: 30px;">
             <span style="background-color: #f88e1b; color: #fff; display: inline-block; font-size: 12px; padding: 5px 0; position: relative; text-align: center; width: 100px;">Upcoming</span>
             <span style="background-color: #15ab53; color: #fff; display: inline-block; font-size: 12px; padding: 5px 0; position: relative; text-align: center; width: 100px;">Current</span>
             <span style="background-color: #f12c22; color: #fff; display: inline-block; font-size: 12px; padding: 5px 0; position: relative; text-align: center; width: 100px;">Ramping Down</span>
           </p>
-        </td>        
-      </tr>     
+        </td>
+      </tr>
     </table>
 
-    <span style="background-color: #f12c22; box-sizing: border-box; color: whiteSmoke; display: block; margin: 15px auto 0; padding: 5px 0 5px 35px; width: 600px;"><span style="font-size: 16px; font-weight: bold;">SpiritAsia test </span><span class="project-header__updated-by"> - Update by Alice</span></span>
-    <table style="-webkit-font-smoothing: antialiased; background-color: #f8f8f8; color: #574141; font-family: 'Open Sans', 'Segoe UI', Segoe, 'Segoe WP', 'Helvetica Neue', 'Roboto', sans-serif; font-size: 12px; font-weight: 200; margin: auto; padding: 0; width: 600px;">
+    <table border="0" cellspacing="0" cellpadding="0" style="-webkit-font-smoothing: antialiased; background-color: #f8f8f8; color: #574141; font-family: 'Open Sans', 'Segoe UI', Segoe, 'Segoe WP', 'Helvetica Neue', 'Roboto', sans-serif; font-size: 12px; font-weight: 200; margin: auto; padding: 0; width: 600px;">
+      <tr>
+        <td style="background-color: white; padding: 10px;"></td>
+      </tr>
+      <tr>
+        <td style="background-color: #f12c22; box-sizing: border-box; color: whiteSmoke; display: block; padding: 5px 0 5px 35px; width: 600px;">
+          <span style="font-size: 16px; font-weight: bold;">SpiritAsia test </span><span class="project-header__updated-by"> - Update by Alice</span>
+        </td>
+      </tr>
       <tr>
         <td style="padding: 10px 35px;">
           <p><span style="font-size: 15px; font-weight: 600;">No. of People:&nbsp;</span>3</p>
@@ -50,8 +57,15 @@
         </td>
       </tr>
     </table>
-    <span style="background-color: #f88e1b; box-sizing: border-box; color: whiteSmoke; display: block; margin: 15px auto 0; padding: 5px 0 5px 35px; width: 600px;"><span style="font-size: 16px; font-weight: bold;">IDA Government Digital Services (GDS) – Multiple Projects</span><span class="project-header__updated-by"> - Update by Bob</span></span>
-    <table style="-webkit-font-smoothing: antialiased; background-color: #f8f8f8; color: #574141; font-family: 'Open Sans', 'Segoe UI', Segoe, 'Segoe WP', 'Helvetica Neue', 'Roboto', sans-serif; font-size: 12px; font-weight: 200; margin: auto; padding: 0; width: 600px;">
+    <table border="0" cellspacing="0" cellpadding="0" style="-webkit-font-smoothing: antialiased; background-color: #f8f8f8; color: #574141; font-family: 'Open Sans', 'Segoe UI', Segoe, 'Segoe WP', 'Helvetica Neue', 'Roboto', sans-serif; font-size: 12px; font-weight: 200; margin: auto; padding: 0; width: 600px;">
+      <tr>
+        <td style="background-color: white; padding: 10px;"></td>
+      </tr>
+      <tr>
+        <td style="background-color: #f88e1b; box-sizing: border-box; color: whiteSmoke; display: block; padding: 5px 0 5px 35px; width: 600px;">
+          <span style="font-size: 16px; font-weight: bold;">IDA Government Digital Services (GDS) – Multiple Projects</span><span class="project-header__updated-by"> - Update by Bob</span>
+        </td>
+      </tr>
       <tr>
         <td style="padding: 10px 35px;">
           <p><span style="font-size: 15px; font-weight: 600;">No. of People:&nbsp;</span>18 to start, expecting 50 by Dec 2016; 200 by 2019</p>
@@ -61,8 +75,15 @@
         </td>
       </tr>
     </table>
-    <span style="background-color: #15ab53; box-sizing: border-box; color: whiteSmoke; display: block; margin: 15px auto 0; padding: 5px 0 5px 35px; width: 600px;"><span style="font-size: 16px; font-weight: bold;">SIAM (Thailand)</span><span class="project-header__updated-by"> - Update by Chris</span></span>
-    <table style="-webkit-font-smoothing: antialiased; background-color: #f8f8f8; color: #574141; font-family: 'Open Sans', 'Segoe UI', Segoe, 'Segoe WP', 'Helvetica Neue', 'Roboto', sans-serif; font-size: 12px; font-weight: 200; margin: auto; padding: 0; width: 600px;">
+    <table border="0" cellspacing="0" cellpadding="0" style="-webkit-font-smoothing: antialiased; background-color: #f8f8f8; color: #574141; font-family: 'Open Sans', 'Segoe UI', Segoe, 'Segoe WP', 'Helvetica Neue', 'Roboto', sans-serif; font-size: 12px; font-weight: 200; margin: auto; padding: 0; width: 600px;">
+      <tr>
+        <td style="background-color: white; padding: 10px;"></td>
+      </tr>
+      <tr>
+        <td style="background-color: #15ab53; box-sizing: border-box; color: whiteSmoke; display: block; padding: 5px 0 5px 35px; width: 600px;">
+          <span style="font-size: 16px; font-weight: bold;">SIAM (Thailand)</span><span class="project-header__updated-by"> - Update by Chris</span>
+        </td>
+      </tr>
       <tr>
         <td style="padding: 10px 35px;">
           <p><span style="font-size: 15px; font-weight: 600;">No. of People:&nbsp;</span>4</p>
